# scraper

./: README.md  pyproject.toml  scraper.ipynb  scraper.py
tests/: test_scraper.py
