[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Faisal Abuzaid <faisalabuzaid@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
ipykernel = "^5.5.5"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
